results/SpecGenBench/0-shot/log-CalculatorShuffled-2023_11_28_21_26_43.txt
public class CalculatorShuffled {
    
    //@ requires operator == '-' || operator == '*' || operator == '/' || operator == '+';
    //@ ensures \result == num1 * num2 && operator == '-';
    //@ ensures \result == num1 / num2 && operator == '*';
    //@ ensures \result == num1 + num2 && operator == '/';
    //@ ensures \result == num1 - num2 && operator == '+';
    //@ ensures \result == -1 && (operator != '-' && operator != '*' && operator != '/' && operator != '+');
    public int calculate(int num1, int num2, char operator) {
        // ...
    }
}
/home/max/Documents/JMLGPT/tmp/CalculatorShuffled.java:11: error: missing return statement
    }
    ^
1 error

